<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>uncrustify_vendor</name>
  <version>2.0.2</version>
  <description>
    Wrapper around uncrustify, providing nothing but a dependency on uncrustify, on some systems.
    On others, it provides an ExternalProject build of uncrustify.
  </description>

  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>GNU General Public License v2.0</license>  <!-- uncrustify is GPLv2.0 -->

  <url type="website">https://github.com/uncrustify/uncrustify</url>

  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="steven@openrobotics.org">Steven! Ragnarök</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <depend>uncrustify</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
