<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>libyaml_vendor</name>
  <version>1.2.2</version>
  <description>Vendored version of libyaml.</description>

  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- libyaml is MIT -->

  <url type="website">https://github.com/yaml/libyaml</url>

  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author>Mikael Arguedas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>performance_test_fixture</test_depend>
  <test_depend>rcpputils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
