<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcpputils</name>
  <version>2.4.1</version>
  <description>Package containing utility code for C++.</description>

  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>Apache License 2.0</license>
  <license>BSD-3-Clause</license>

  <author email="eknapp@amazon.com">Emerson Knapp</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcutils</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
